salvando alterações (index.html)

--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <form>
-        <h1>Lista de tarefas</h1>
-        <input type="text" id="Nome-tarefa" required placeholder="Nome da tarefa" />
-        <button type="submit" >Cadastrar</button>
-    </form>
-    <ul>
-        <li>
-            <div class="overlay-text-link">
-                <a href="Nome da tarefa" alt="Nome da tarefa" >
-                </a>
+    <reader>
+        <form>
+            <div class="container">
+                <h1>Lista de tarefas</h1>
             </div>
-        </li>
-    </ul>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="main.js"></script>
+            <input type="text" id="Nome-tarefa" required placeholder="Nome da tarefa" />
+            <button type="submit">Cadastrar</button>
+        </form>
+        <ul>
+            <li>
+                <div class="overlay-text-link">
+                    <a href="Nome da tarefa" alt="Nome da tarefa" >
+                    </a>
+                </div>
+            </li>
+        </ul>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="main.js"></script>
+    </reader>
+    
 </body>
 </html>
