salvando alterações (index.html)

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </form>
         <ul>
             <li>
-                    <a href="nomeDaTarefa" alt="Nome da tarefa" >
-                    </a>
+                    <a href="nomeDaTarefa" alt="Nome da tarefa" ></a>
+                    <class="concluido" alt="concluido" ></class>
             </li>
         </ul>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
