--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </ul>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="main.js"></script>
+        <script src="https://api.jquery.com/on/"></script>
+        <script src=" https://api.jquery.com/addClass/"></script>
     </reader>
     
 </body>
