--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
             <div class="container">
                 <h1>Formulário de cadastro</h1>
                 <form>
-                    <div>
+                    <div class="form-campo">
                         <label for="nome completo">Nome completo:</label>
                         <input type="text" id="nome">
                     </div>
-                    <div>
+                    <div class="form-campo">
                         <label for="E-mail">E-mail:</label>
                         <input type="email" id="E-mail">
                     </div>
-                    <div>
+                    <div class="form-campo">
                         <label for="Telefone">Telefone:</label>
                         <input type="tel" id="Telefone">
                     </div>
-                    <div>
+                    <div class="form-campo">
                         <label for="CPF">CPF:</label>
                         <input type="CPF" id="CPF">
                     </div>
-                    <div>
+                    <div class="form-campo">
                         <label for="Endereço completo">Endereço completo:</label>
                         <input type="Endereço completo" id="Endereço completo">
                     </div>
-                    <div>
+                    <div class="form-campo">
                         <label for="CEP">CEP:</label>
                         <input type="CEP" id="CEP">
                     </div>
