salvando alterações (index)

--- a/index.html
+++ b/index.html
@@ -42,5 +42,15 @@
                 </form>
             </div>
         </section>
+        <script type = "text/javascript" src="//code.jquery-1.11.0.min.js"></script>
+        <script type = "text/javascrip"src="//code.jquery-1.11.0.min.js"></script>
+        <script>
+            $(document).ready(function() {
+            
+            $('#Telefone').mask('(00) 0000-0000')
+            $('#CPF').mask('000.000.000-00')
+            $('#CEP').mask('00000-000')
+            })
+        </script>
     </body>
 </html>
