salvando alterações (<index>)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             </div>
         </section>
         <script type = "text/javascript" src="//code.jquery-1.11.0.min.js"></script>
-        <script type = "text/javascrip"src="//code.jquery-1.11.0.min.js"></script>
+        <script src="./js/jquery.mask.min.js"></script>
+        <script src="./js/jquery.validate.min.js"></script>
+
         <script>
             $(document).ready(function() {
             
