--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
                 <form>
                     <div class="form-campo">
                         <label for="nome completo">Nome completo:</label>
-                        <input type="text" id="nome">
+                        <input type="text" id="nome" name="nome">
                     </div>
                     <div class="form-campo">
                         <label for="E-mail">E-mail:</label>
-                        <input type="email" id="E-mail">
+                        <input type="email" id="E-mail" name="E-mail">
                     </div>
                     <div class="form-campo">
                         <label for="Telefone">Telefone:</label>
-                        <input type="tel" id="Telefone">
+                        <input type="tel" id="Telefone" name="Telefone">
                     </div>
                     <div class="form-campo">
                         <label for="CPF">CPF:</label>
-                        <input type="CPF" id="CPF">
+                        <input type="CPF" id="CPF" name="CPF">
                     </div>
                     <div class="form-campo">
                         <label for="Endereço completo">Endereço completo:</label>
-                        <input type="Endereço completo" id="Endereço completo">
+                        <input type="Endereço completo" id="Endereço completo" name="Endereço completo">
                     </div>
                     <div class="form-campo">
                         <label for="CEP">CEP:</label>
-                        <input type="CEP" id="CEP">
+                        <input type="CEP" id="CEP" name="CEP">
                     </div>
                     <button type="submit">Enviar</button>
                 </form>
@@ -45,14 +45,7 @@
         <script type = "text/javascript" src="//code.jquery-1.11.0.min.js"></script>
         <script src="./js/jquery.mask.min.js"></script>
         <script src="./js/jquery.validate.min.js"></script>
-
-        <script>
-            $(document).ready(function() {
-            
-            $('#Telefone').mask('(00) 0000-0000')
-            $('#CPF').mask('000.000.000-00')
-            $('#CEP').mask('00000-000')
-            })
-        </script>
+        <script src="./js/messages_pt_BR.min.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
