salvando alterações (main.js)

--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
         <ul>
             <li>
                     <a href="nomeDaTarefa" alt="Nome da tarefa" ></a>
-                    <class="concluido" alt="concluido" ></class>
+                    <class id="checked" alt="checked" ></class>
             </li>
         </ul>
+        
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="main.js"></script>
         <script src="https://api.jquery.com/on/"></script>
         <script src=" https://api.jquery.com/addClass/"></script>
+        <script src=" .addClass() | jQuery API Documentation"></script>
     </reader>
     
 </body>
-</html>
+</html> 
