salvando alterações (index.html)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="form-campo">
                         <label for="CPF">CPF:</label>
-                        <input type="CPF" id="CPF" name="CPF">
+                        <input type="text" id="CPF" name="CPF">
                     </div>
                     <div class="form-campo">
                         <label for="Endereço completo">Endereço completo:</label>
@@ -36,13 +36,13 @@
                     </div>
                     <div class="form-campo">
                         <label for="CEP">CEP:</label>
-                        <input type="CEP" id="CEP" name="CEP">
+                        <input type="text" id="CEP" name="CEP">
                     </div>
                     <button type="submit">Enviar</button>
                 </form>
             </div>
         </section>
-        <script type = "text/javascript" src="//code.jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="./js/jquery.mask.min.js"></script>
         <script src="./js/jquery.validate.min.js"></script>
         <script src="./js/messages_pt_BR.min.js"></script>
