salvando alterações (index.html)

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
             <input type="text" id="Nome-tarefa" required placeholder="Nome da tarefa" />
             <button type="submit">Cadastrar</button>
         </form>
-        <ul>
+        <ul id="listaNaMao">
             <li>
                     <a href="nomeDaTarefa" alt="Nome da tarefa" ></a>
-                    <class id="checked" alt="checked" ></class>
             </li>
         </ul>
         
